# pyisolate

./: README.md  SETUP_GUIDE.md  pyproject.toml  run_benchmarks_windows.bat
.github/workflows/: ci.yml
comfy_hello_world/: main.py
pyisolate/: host.py
pyisolate/_internal/: client.py  host.py  shared.py
tests/: test_client_snapshot.py  test_comfy_shims.py  test_extension_safety.py  test_singleton_shared.py
tests/smoke/: test_examples.py
